<resources>
    <string name="app_name">TenderHaltInfo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_notification">HELLO Notification</string>
    <string name="hello_profile">Hello profile</string>
    <string name="status">status</string>
    <string name="tenderid">TenderId</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="location">location</string>
    <string name="halt">halt</string>
    <string name="open_map">open map</string>
    <string name="add_location">Add Location</string>
    <string name="submit">submit</string>

    <string name="enter_profile_details">Enter Profile Details</string>
    <string name="notification">NOTIFICATION</string>
    <string name="tender_id">Tender ID</string>
    <string name="add_date">Add Date</string>
    <string name="is_verified_nan">Is Verified : ---NAN---</string>
    <string name="choose_type_of_calamity">Choose type of Calamity</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date">Date</string>
    <string name="_2_7_7">2/7/7</string>
    <string name="dates">Enter Date</string>
    <string name="animations">shared_rv_adder_animation</string>
    <string name="contractor_id">Contractor ID</string>
    <string name="pending">pending</string>
</resources>
