<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:id="@+id/img_rv_row"
        android:src="@drawable/ic_person_black"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rv_contractor_row_tender_id"
        android:hint="@string/tenderid"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rv_contractor_row_tender_date_start"
        android:hint="@string/start"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rv_contractor_row_tender_date_end"
        android:hint="@string/end"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rv_contractor_row_tender_location"
        android:hint="@string/location"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rv_contractor_row_tender_status"
        android:hint="@string/status"/>
</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/halt"
        android:id="@+id/bt_rv_contractor_tender_halt_request"/>

</LinearLayout>