<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".Activity.AddTenderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/first_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:orientation="vertical"
            android:padding="12dp"
            android:transitionName="shared_rv_adder_animation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tender ID : "

                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_tender_detail_tenderID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/tenderid"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location : "
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_tender_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/location"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Start Date : "
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_tender_detail_start_date"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/start"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="End Date : "
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_tender_detail_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/end"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_type_of_calamity"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spn_tender_detail_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_tender_detail_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="5"
                android:hint="@string/_2_7_7"
                android:padding="7dp" />

            <Button
                android:layout_weight="3"
                android:id="@+id/btn_tender_detail_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_date" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
               android:visibility="gone"
                android:id="@+id/btn_tender_detail_image"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/ic_camera_alt_black_24dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_tender_detail_is_verify"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/is_verified_nan"
            android:textAlignment="center" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_tender_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@id/btn_tender_detail_submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:elevation="4dp" />

    <Button
        android:id="@+id/btn_tender_detail_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/submit_button_border"
        android:text="SUBMIT"
        android:textColor="#FFFFFF" />
</RelativeLayout>